--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,6 @@ cycler==0.12.1
 dataclasses-json==0.6.7
 Deprecated==1.2.18
 distro==1.9.0
-dotenv==0.9.9
 durationpy==0.10
 effdet==0.4.1
 emoji==2.14.1
@@ -46,6 +45,7 @@ GitPython==3.1.44
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.0
 google-auth==2.40.3
+google-cloud-speech
 google-cloud-texttospeech==2.27.0
 google-cloud-vision==3.10.2
 googleapis-common-protos==1.70.0
@@ -151,6 +151,7 @@ python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.2
 python-pptx==1.0.2
+pysqlite3-binary
 pytz==2025.2
 PyYAML==6.0.2
 RapidFuzz==3.13.0
@@ -171,6 +172,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.41
+st-audiorec
 starlette==0.45.3
 streamlit==1.45.1
 sympy==1.14.0
@@ -205,6 +207,3 @@ XlsxWriter==3.2.3
 yarl==1.20.0
 zipp==3.23.0
 zstandard==0.23.0
-pysqlite3-binary
-langdetect
-
