--- a/requirements.txt
+++ b/requirements.txt
@@ -172,7 +172,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.41
-st-audiorec
+streamlit-audiorec
 starlette==0.45.3
 streamlit==1.45.1
 sympy==1.14.0
