--- a/requirements.txt
+++ b/requirements.txt
@@ -154,6 +154,7 @@ python-pptx==1.0.2
 pysqlite3-binary
 pytz==2025.2
 PyYAML==6.0.2
+pydub
 RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
