--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 accelerate==1.7.0
+audioop
 aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.11
@@ -141,6 +142,7 @@ pyparsing==3.2.3
 pypdf==5.6.0
 pypdfium2==4.30.1
 PyPika==0.48.9
+pyaudioop
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
